--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,7 @@
 default: &default
+  # adapter: sqlite3
+  # pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  # timeout: 5000
   adapter: mysql2
   encoding: utf8
   database: bookshelf_db
