--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "book_shelf",
+  "name": "EnjoyReading",
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
-    "turbolinks": "^5.2.0"
+    "@rails/webpacker": "^4.2.2",
+    "jquery": "^3.4.1",
+    "rails-ujs": "^5.2.4",
+    "turbolinks": "^5.2.0",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.11"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.9.0"
   }
 }
