--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,7 @@ default: &default
   # pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   # timeout: 5000
   adapter: mysql2
+  charset: utf8
   encoding: utf8
   database: bookshelf_db
   pool: 5
